syntax = "proto2";
package Arbiter.CASC;

message RequestCascReloadOperation {
}